--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ header {
 
 /* 各アイテムの設定 */
 .gallery_slide li {
-  flex: 0 0 25%; /* 1つの画像が全体の4分の1の幅を取る */
+  flex: 0 0 10%; /* 1つの画像が全体の4分の1の幅を取る */
   width: 100%; /* 幅を指定 */
 }
 
@@ -148,8 +148,46 @@ header {
 /* スライダー部分の設定 */
 .gallery_slide {
   display: flex;
+  animation: slide 40s linear infinite; /* 40秒で1周する設定 */
+}
+
+.gallery_slide li {
+  flex: 0 0 25%;
   width: 100%;
-  animation: slide 30s linear infinite; /* 無限ループの設定 */
+  height: 300px;           /* 高さを固定 */
+  display: flex;           /* 中央揃え用 */
+  align-items: center;     /* 縦方向センター */
+  justify-content: center; /* 横方向センター */
+  overflow: hidden;        /* 枠からはみ出す部分を隠す */
+}
+
+.gallery_slide li img {
+  height: 100%;   /* 高さ100px以内に収める */
+  width: 50%;        /* 横幅は自動調整して縦横比を維持 */
+  object-fit: cover; /* 余白ありで収める場合 */
+}
+
+.item  {
+  background-color: #80BA4A;
+}
+
+.btn {
+	border-radius: 25px;
+	position: relative;
+}
+
+.btn a::after {
+	content: "";
+	display: block;
+	position: absolute;
+	background-image: url('arrow.png');
+	background-size: 100%;
+	width: 7px;
+	height: 17px;
+	top: 0;
+	bottom: 0;
+	right: 10px;
+	margin: auto;
 }
 
 /* アニメーション（スライド） */
@@ -162,23 +200,37 @@ header {
   }
 }
 
-.gallery_slide {
+/* フッター */
+
+.footer_menu {
+  text-align: center;
+}
+
+.footer_menu img {
+  width: 200px;
+  height: 100px;
+  display: block;
+  object-fit: contain;
+  border-radius: 20px;
+  text-align: center;
+}
+
+.footer_menu_flex {
   display: flex;
-  animation: slide 40s linear infinite; /* 40秒で1周する設定 */
+  flex-wrap: wrap;
+  align-items: center;
+  text-align: center;
 }
 
-.gallery_slide li {
-  flex: 0 0 25%;
-  width: 100%;
-  height: 100px;           /* 高さを固定 */
-  display: flex;           /* 中央揃え用 */
-  align-items: center;     /* 縦方向センター */
-  justify-content: center; /* 横方向センター */
-  overflow: hidden;        /* 枠からはみ出す部分を隠す */
+.footer_menu li {
+  margin-left: 40px;
+  font-size: 16px;
 }
 
-.gallery_slide li img {
-  height: 100%;   /* 高さ100px以内に収める */
-  width: 50%;        /* 横幅は自動調整して縦横比を維持 */
-  object-fit: cover; /* 余白ありで収める場合 */
+.footer_menu li a {
+  transition: .3s;
+}
+.footer_menu li a:hover {
+  color: #80BA4A;
+  transition: .3s;
 }
