--- a/css/works.css
+++ b/css/works.css
@@ -98,11 +98,47 @@ header {
 }
 
 .gallery_layout {
+  position: relative;
   padding: 0.5em 1em;
   margin: 2em 0;
   color: #000000;
   background: #FFF;
-  border: solid 1px #000000;
+  /* border: solid 1px #000000; */
+  box-shadow: 3px 4px 9px 6px rgba(0, 0, 0, 0.45);
+}
+
+.gallery_layout:hover {
+  .gallery_hover-contents {
+    opacity: 1;
+  }
+}
+
+.gallery_hover-contents {
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.gallery_hover-content {
+  z-index: 100;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  height: 80%;
+  padding: 30px;
+  background-color: #fff;
+}
+
+.gallery_hover-overlay {
+  z-index: 10;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  opacity: 0.5;
 }
 
 .gallery_layout h3{
